methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:28: error: not found: value green
  return green
         ^